--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">CSCI310 Eric Guo</string>
+    <string name="header_left">CSCI310</string>
+    <string name="header_right">Eric Guo</string>
     <string name="mines_left_label">Mines</string>
     <string name="seconds_label">Sec</string>
     <string name="mode_dig">Dig</string>
